# cryptonews-ml-pipeline

./: .env.docker  .gitignore  Dockerfile  Makefile  README  README.md  docker-compose.yml  ideas.md  pyproject.toml
data_generation/: __init__.py  data_generator.py
data_generation/db/: qdrant.py
data_generation/utils/: openai_helper.py
data_ingestion/: backfill.py  config.py  tools.py
data_ingestion/crawlers/: __init__.py  coin_telegraph.py
data_ingestion/models/: documents.py
data_ingestion_pipeline/: .env.docker  Makefile  README  README.md  backfill.py  config.py  crawler.dockerfile  docker-compose.yml  main.py  pyproject.toml  tools.py
data_ingestion_pipeline/crawlers/: __init__.py  base.py  coin_telegraph.py  news_api.py  news_btc.py  telegram.py
data_ingestion_pipeline/db/: mongodb.py
data_ingestion_pipeline/models/: documents.py
feature_pipeline/: Makefile  README.md  docker-compose.yml  insert_data_mongo.py  pyproject.toml  settings.py  stream_processor.dockerfile
feature_pipeline/data_flow/: bytewax_pipeline.py  mq.py  stream_input.py  stream_output.py
feature_pipeline/data_logic/: cleaning_data_handlers.py  handlers.py
feature_pipeline/db/: documents.py  qdrant.py
feature_pipeline/llm_components/: prompt_templates.py
feature_pipeline/models/: base.py  chunk.py  clean.py  embedded_chunk.py  raw.py
feature_pipeline/rag/: query_expanison.py  query_meta_extractor.py  retriever.py
finetuning/: build_config.example.yaml  build_config.yaml  data_generator.py  pyproject.toml  settings.py
finetuning/db/: qdrant.py
finetuning/training/: __init__.py  config.yaml  dataset_client.py  model.py  requirements.txt  settings.py  utils.py
finetuning/utils/: data_formatter.py
media/: ml-flow-chart.drawio
model_evaluation/: __init__.py  inference_pipeline.py  settings.py
model_evaluation/db/: mongo.py
model_evaluation/evaluation/: __init__.py
model_evaluation/llm_components/: prompt_templates.py
model_evaluation/rag/: retriever.py
mongo_sync_pipeline/: cdc.py
mongodb_sync/: .env.docker  Makefile  README  settings.py  test_cdc.py
notebooks/: batch_insert.ipynb  data_preparation.ipynb  dataset_preparation.ipynb  inference_test.ipynb  rag_demo.ipynb  scrapping_playground.ipynb  summarization.ipynb
src/: backfill.py  config.py  main.py  telegram_starter.py  tools.py
src/crawlers/: base.py  coin_telegraph.py
src/models/: documents.py
