[tool.poetry]
name = "text-fetch-etl"
version = "0.1.0"
description = ""
authors = ["cancamilo <camiloramirezf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.6.3"
pydantic-settings = "^2.1.0"
bytewax = "0.18.2"
pika = "^1.3.2"
qdrant-client = "^1.8.0"
unstructured = "^0.12.6"
langchain = "^0.1.13"
sentence-transformers = "^2.6.1"
instructorembedding = "^1.0.1"
numpy = "^1.26.4"
langchain-openai = "^0.1.3"
gdown = "^5.1.0"
pymongo = "^4.7.1"
structlog = "^24.1.0"
rich = "^13.7.1"
pip = "^24.0"
install = "^1.3.5"
comet-ml = "^3.41.0"
ruff = "^0.4.3"
comet-llm = "^2.2.4"
qwak-sdk = "^0.5.69"
pandas = "^2.2.2"
peft = "^0.11.1"
qwak-inference = "^0.1.17"
ragas= "^0.1.9"
fire = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
