[tool.poetry]
name = "finetuning"
version = "0.1.0"
description = ""
authors = ["cancamilo <camiloramirezf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pydantic = "^2.6.3"
pydantic-settings = "^2.1.0"
qdrant-client = "^1.8.0"
langchain = "^0.1.13"
numpy = "^1.26.4"
langchain-openai = "^0.1.3"
python-dotenv = "^1.0.1"
openai = "^1.30.1"
qwak-sdk = "^0.5.71"
comet-ml = "^3.43.0"
structlog = "^24.2.0"
pandas = "^2.2.2"
peft = "^0.11.1"
datasets = "^2.19.2"
transformers = "^4.41.2"
safetensors = "^0.4.3"
accelerate = "^0.30.1"
bitsandbytes = "0.42.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
